# streamtest

./: .env.example  .gitattributes  .gitignore  DeepLearning.ipynb  DeepLearning.py  README.md  SL_app.py  SL_app01.py  packages.dummy  packages.txt  pyproject.toml  requirements.txt  style.css  themes.json  tstSL.py
.streamlit/: config.toml
backend/: analogy.py  cluster.py  loader.py  outlier.py  similar.py  utils.py
data/: MovieReview.csv  MovieReview_gld.csv  tokenizer.pkl  word2vec.h5  word2vec.keras  word2vec.weights.h5
dataMV/: avis_40k.csv  avis_40k_clean.csv  avis_40k_final_avec_topics.csv  avis_oscaro_9_familles.csv
dataMV/modele_bertopic_9themes/: config.json  ctfidf.safetensors  ctfidf_config.json  topic_embeddings.safetensors  topics.json
dataMV/modele_bertopic_oscaro/: config.json  ctfidf.safetensors  ctfidf_config.json  topic_embeddings.safetensors  topics.json
log/: runtime_log.csv
pages/: 0_main.py  1_mot_proches.py  2_analogies.py  3_clustering.py  4_outliers.py  5_osexplo.py  6_ME_app_streamlit.py  6_MV_BertTopic.py  7_LG_BertTopic.py  8_RM_clustering.py
