[project]
name = "streamlearn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.4.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "plotly>=6.6.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
    "tensorflow>=2.21.0",
    "wordcloud>=1.9.6",
]

