[project]
name = "streamlearn"
version = "0.1.0"
description = "streamlit exploration and understanding coding and deployment"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "bertopic>=0.17.4",
    "gensim>=4.4.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "plotly>=6.6.0",
    "pyngrok>=8.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
    "tensorflow>=2.21.0",
    "umap-learn>=0.5.12",
    "wordcloud>=1.9.6",
    "sentence-transformers[openvino]>=5.3.0",
    "openvino>=2026.0",   # force une version compatible
    "optimum-intel>=1.27.0",
    "spacy>=3.8.11",
    "umap-learn>=0.5.11",
    "hdbscan>=0.8.41",
    "langdetect>=1.0.9",
    "jinja2>=3.1.6",
    "tf-keras>=2.21.0",
]

[tool.uv]
dev-dependencies = []
# supposed to be the way to go in future release ?? dependency-groups.dev = []
